--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,13 @@
 {
-	"name": "peterbodnar.com/bsqr",
+	"name": "depesr/php-bsqr",
 	"description": "By Square document encoding, parsing and rendering utilities",
 	"keywords": ["bysquare", "paybysquare"],
 	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
-	"autoload": {"psr-4": {"com\\peterbodnar\\bsqr\\": "src/"}},
+	"autoload": {"psr-4": {"bsqr\\": "src/"}},
 	"require": {
-		"php": "^5.4 || ^7.0",
-		"peterbodnar.com/base32": "^1.0",
-		"peterbodnar.com/cmd": "^1.0",
-		"peterbodnar.com/mx2svg": "^1.0",
-		"peterbodnar.com/qrcoder": "^1.0"
+		"php": ">=8.0",
+		"ext-imagick": "*",
+		"bacon/bacon-qr-code": "v3.0.0"
 	},
-	"require-dev": {
-		"nette/tester": "^1.7"
-	}
+    "version": "1.0"
 }
